@@ -19,6 +19,8 @@
   broken.
 - Fixed issue #10625: ezcConsoleStatusbar isset access to property $options
   broken.
+- Fixed issue #10626: ezcConsoleStatusbar does not trigger warning on invalid
+  status.
 
 1.2 - Monday 18 December 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
